--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 					<div class="hero-text">
 						<div class="hero-text-tablecell">
 							<h1>I'm Vaishnavi Data analyst</h1>
-							<div class="hero-btns">
-								<a href="shop.html" style="width: 120px;" class="boxed-btn ">Skills</a>
+							<div >
+								<a href="shop.html" style="width: 120px; margin-right:10px ;"  class="boxed-btn ">Skills</a>
 								<a href="contact.html" style="width: 120px;"  class="bordered-btn">Project</a>
 							</div>
 						</div>
