--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 						<div class="hero-text-tablecell">
 							<h1>I'm Vaishnavi Data analyst</h1>
 							<div >
-								<a href="shop.html" style="width: 120px; margin-right:10px ;"  class="boxed-btn ">Skills</a>
-								<a href="contact.html" style="width: 120px;"  class="bordered-btn">Project</a>
+								<a href="#skill" style="width: 120px; margin-right:10px ;"  class="boxed-btn ">Skills</a>
+								<a href="#project" style="width: 120px;"  class="bordered-btn">Project</a>
 							</div>
 						</div>
 					</div>
